--- a/.github/workflows/depoy.yaml
+++ b/.github/workflows/depoy.yaml
@@ -16,7 +16,9 @@ jobs:
           cache: npm
  
       - name: Build
-        run: npm docs:build
+        run: 
+          npm ci
+          npm docs:build
  
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
