--- a/.github/workflows/depoy.yaml
+++ b/.github/workflows/depoy.yaml
@@ -17,8 +17,8 @@ jobs:
  
       - name: Build
         run: 
-          npm ci
-          npm docs:build
+          npm install
+          npm run docs:build
  
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
