--- a/.github/workflows/depoy.yaml
+++ b/.github/workflows/depoy.yaml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 16
           cache: npm
- 
+          cache-dependency-path: '**/package-lock.json'
       - name: Build
         run: 
           npm install
