--- a/.github/workflows/depoy.yaml
+++ b/.github/workflows/depoy.yaml
@@ -14,10 +14,10 @@ jobs:
         with:
           node-version: 16
           cache: npm
-          cache-dependency-path: '**/package-lock.json'
+          cache-dependency-path: subdir/package-lock.json
       - name: Build
         run: 
-          npm install
+          npm ci
           npm run docs:build
  
       - name: Deploy
