--- a/.github/workflows/depoy.yaml
+++ b/.github/workflows/depoy.yaml
@@ -13,12 +13,12 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-          cache: npm
-          # cache-dependency-path: /package-lock.json
+          cache: yarn
+          # cache-dependency-path: '**/package-lock.json'
       - name: Install and Build
         run: 
-          npm install
-          npm run docs:build
+          yarn install
+          yarn docs:build
  
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
