--- a/.github/workflows/depoy.yaml
+++ b/.github/workflows/depoy.yaml
@@ -15,11 +15,12 @@ jobs:
           node-version: 16
           cache: yarn
           # cache-dependency-path: '**/package-lock.json'
-      - name: Install and Build
+      - name: Install
         run: 
           yarn install
+      - name: Build
+        run: 
           yarn docs:build
- 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
